--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,13 +1,12 @@
 .portfolio__container{
     display: grid;         
     grid-template-columns: repeat(3, 1fr);
-    justify-content: center;
-    gap: 30px;                    
+    gap: 2.5rem;                    
 }
 
 .portfolio__item{
     background: var(--color-bg-variant);
-    padding: 1.2rem;
+    padding: 1.3rem;
     border-radius: 2rem;
     border: 1px solid transparent;
     transition: var(--transition);
@@ -40,16 +39,15 @@
     .portfolio__container{
         grid-template-columns: 1fr ;
         gap: 1.2rem;
-        
     }
 
-    .portfolio__item{
-       
-    }
+
 }
 @media screen and (max-width: 600px){
     .portfolio__container{
-        grid-template-columns: 1fr;;
+        grid-template-columns: 1fr;
         gap: 1rem;
     }
+    
+
 }
