--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -2,7 +2,8 @@
     display: grid;         
     grid-template-columns: repeat(3, 1fr);
     justify-content: center;
-    gap: 30px;                    
+    gap: 30px;        
+     
 }
 
 .portfolio__item{
@@ -22,6 +23,8 @@
 }
 .portfolio__item h3{
     margin: 1.2rem 0 2rem;
+    margin-top: 1rem;
+    
 }
 
 .portfolio__item-cta{
@@ -32,6 +35,10 @@
 h3{
     display: flex;
     justify-content: center;
+}
+
+ h5 {
+    margin-top: 1rem;          
 }
 
 
