--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -56,9 +56,11 @@
 @media screen and (max-width:600px){
     .experience__container{
         gap: 1rem;
+        
     }
     .experience__container>div{
-        width: 100%;
+        width: 90%;
         padding: 2rem 1rem;
+        margin-left: -0.5rem;
     }
 }
