--- a/src/components/aboutSide/about.css
+++ b/src/components/aboutSide/about.css
@@ -87,7 +87,8 @@
         margin: 0 auto 3rem;
     }
     .about__cards{
-        grid-template-columns: 1fr 1fr;
+        display: grid;
+        grid-template-columns: 1fr;
         gap: 1rem;
     }
     .about__content{
@@ -96,5 +97,7 @@
     .about__content p{
         margin:1.5rem 0;
     }
+
+    
     
 }
