--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -24,7 +24,7 @@
 }
 .experience__content{
     display:grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     row-gap: 4rem;
 }
 
